# CMake-Basic-C-Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml  ubuntu.yml
include/introduction/: version.h
include/introduction/util/: util.h
src/introduction/util/: util.c
test/src/: main.c  run-tests.c
